pkg/gateway/xds/translator/testdata/out/xds-ir/http-route-direct-response.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - directResponse:
        body:
          inlineString: 'Unknown custom filter type: UnsupportedType'
        status: 500
      match:
        prefix: /
      name: direct-route
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/direct-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
